gccida/c3/reposition_prologue_and_epilogue_notes
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8356:4: error: expected ';' after expression
rtx last_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8356:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8357:4: error: expected ';' after expression
rtx j; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8357:5: error: use of undeclared identifier 'j'
rtx j; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8358:4: error: expected ';' after expression
rtx v28; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8358:5: error: use of undeclared identifier 'v28'
rtx v28; // r8 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8411:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( __int64)rtx[2]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8437:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v15 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8498:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v15 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8561:1: error: use of undeclared identifier 'last_insn'
last_insn = get_last_insn( ); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8562:7: error: use of undeclared identifier 'last_insn'
if ( !last_insn ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8564:1: error: use of undeclared identifier 'j'
j = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8565:1: error: use of undeclared identifier 'v28'
v28 = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8568:17: error: use of undeclared identifier 'last_insn'
if ( *( _WORD *)last_insn != 32 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8570:17: error: use of undeclared identifier 'last_insn'
if ( *( _WORD *)last_insn != 37 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8572:6: error: use of undeclared identifier 'last_insn'
if ( last_insn[2].fld[0].rtint == -89 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8573:1: error: use of undeclared identifier 'j'
j = last_insn; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8573:5: error: use of undeclared identifier 'last_insn'
j = last_insn; 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/function.c:8575:1: error: use of undeclared identifier 'last_insn'
last_insn = ( rtx)last_insn[1]; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reposition_prologue_and_epilogue_notes/src/obj/function.o] Error 1
